--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 	box-sizing: border-box;
 }
 
-body {
+html,
+body,
+#root {
 	background-color: black;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
 }
