--- a/src/styles/PrankPage.css
+++ b/src/styles/PrankPage.css
@@ -3,10 +3,10 @@
 	padding: 30px 0 0 0;
 }
 
-/* .rule {
+.rule {
 	background-color: white;
 	border: none;
 	height: 0px;
 	border-top: 1px solid red;
 	margin: 20px 0;
-} */
+}
